--- a/DienThoai.html
+++ b/DienThoai.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+<!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
     <meta charset="UTF-8">
@@ -7,24 +8,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- InstanceBeginEditable name="doctitle" -->
     <title>Điện thoại</title>
-	<link rel="stylesheet" href="css/DienThoai_style.css">
+    <link rel="stylesheet" href="css/DienThoai_style.css">
     <!-- InstanceEndEditable -->
     <link rel="stylesheet" href="css/bootstrap-theme.css">
-<link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-<link rel="stylesheet" href="css/slick.css">
-<link rel="stylesheet" href="css/slick-theme.css">
-<link rel="stylesheet" href="css/TrangChu_style.css">
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/TrangChu_style.css">
+    <!-- InstanceBeginEditable name="head" -->
+    <!-- InstanceEndEditable -->
 </head>
 
 <body>
-<header>
+    <header>
         <div class="header-list">
             <div class="header-list--logo-and-search">
                 <div class="logo">
-                    <a href="TrangChu.html"><i class="icon logo__ico"></i></a>
+                    <a href="index.html"><i class="icon logo__ico"></i></a>
                 </div>
                 <div class="search">
                     <input type="text" placeholder="Bạn tìm gì">
@@ -143,7 +144,8 @@
                                     <img src="images/111.jpg" alt="" class="img-responsive">
                                     <div class="sub_title">
                                         <h4><a href="#" class="name_phone">iPhone 7 Plus 32GB</a></h4>
-                                        <p class="price">12.990.000₫&nbsp;&nbsp;<span class="old_price">13.990.000₫</span></p>
+                                        <p class="price">12.990.000₫&nbsp;&nbsp;<span
+                                                class="old_price">13.990.000₫</span></p>
                                         <p class="description">Cơ hội trúng 200 học bổng tổng trị giá đến 2 tỷ đồng.</p>
                                     </div>
                                 </div>
@@ -292,7 +294,8 @@
                                     <img src="images/124.jpg" alt="" class="img-responsive">
                                     <div class="sub_title">
                                         <h4><a href="#" class="name_phone">iPhone X 64GB</a></h4>
-                                        <p class="price">21.990.000₫&nbsp;&nbsp;<span class="old_price">22.990.000₫</span></p>
+                                        <p class="price">21.990.000₫&nbsp;&nbsp;<span
+                                                class="old_price">22.990.000₫</span></p>
                                         <p class="description">Cơ hội trúng 200 học bổng tổng trị giá đến 2 tỷ đồng.</p>
                                     </div>
                                 </div>
@@ -304,7 +307,8 @@
                                     <img src="images/125.jpg" alt="" class="img-responsive">
                                     <div class="sub_title">
                                         <h4><a href="#" class="name_phone">Samsung Galaxy Note 9</a></h4>
-                                        <p class="price">20.490.000₫&nbsp;&nbsp;<span class="old_price">22.990.000₫</span></p>
+                                        <p class="price">20.490.000₫&nbsp;&nbsp;<span
+                                                class="old_price">22.990.000₫</span></p>
                                         <p class="description">Cơ hội trúng 200 học bổng tổng trị giá đến 2 tỷ đồng.</p>
                                     </div>
                                 </div>
@@ -329,7 +333,8 @@
                                     <img src="images/127.jpg" alt="" class="img-responsive">
                                     <div class="sub_title">
                                         <h4><a href="#" class="name_phone">Huawei P30 Pro</a></h4>
-                                        <p class="price">20.690.000₫&nbsp;&nbsp;<span class="old_price">22.990.000₫</span></p>
+                                        <p class="price">20.690.000₫&nbsp;&nbsp;<span
+                                                class="old_price">22.990.000₫</span></p>
                                         <p class="description">Cơ hội trúng 200 học bổng tổng trị giá đến 2 tỷ đồng.</p>
                                     </div>
                                 </div>
@@ -390,7 +395,8 @@
                                     <img src="images/132.jpg" alt="" class="img-responsive">
                                     <div class="sub_title">
                                         <h4><a href="#" class="name_phone">iPhone 8 Plus 64GB</a></h4>
-                                        <p class="price">18.990.000₫&nbsp;&nbsp;<span class="old_price">19.990.000₫</span></p>
+                                        <p class="price">18.990.000₫&nbsp;&nbsp;<span
+                                                class="old_price">19.990.000₫</span></p>
                                         <p class="description">Cơ hội trúng 200 học bổng tổng trị giá đến 2 tỷ đồng.</p>
                                     </div>
                                 </div>
@@ -435,7 +441,8 @@
                     </ul>
                 </div>
                 <div class="col-md-12 text-center">
-                    <button class="viewmore_dien_thoai">Xem thêm 125 điện thoại <span class="glyphicon glyphicon-triangle-bottom"></span></button>
+                    <button class="viewmore_dien_thoai">Xem thêm 125 điện thoại <span
+                            class="glyphicon glyphicon-triangle-bottom"></span></button>
                 </div>
             </div>
             <div class="row other_phones_dien_thoai">
@@ -512,15 +519,16 @@
                 </div>
                 <div class="col-md-3">
                     <ul class="list_about">
-                        <li><a href="#"><i class="icon icon_fb"></i>&nbsp;3.3tr</a> | <a href="#"><i class="icon icon_ytb"></i>&nbsp;616.1k</a></li>
+                        <li><a href="#"><i class="icon icon_fb"></i>&nbsp;3.3tr</a> | <a href="#"><i
+                                    class="icon icon_ytb"></i>&nbsp;616.1k</a></li>
                         <li>Website cùng tập đoàn:</li>
                         <li><a href="#"><i class="icon icon_dmx"></i></a></li>
                         <li><a href="#"><i class="icon icon_bhx"></i></a></li>
                     </ul>
                 </div>
             </div>
-      </div>
-</footer>
+        </div>
+    </footer>
     <div class="container-fluid privacy">
         <div class="row">
             <div class="col-md-12 sub_privacy">
@@ -533,20 +541,22 @@
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
-	<script src="js/slick.js"></script>
-	<script src="js/nav-mobile.js"></script>
-	<!-- InstanceBeginEditable name="EditRegion1" -->
-	<script type="text/javascript">
-		$(document).ready(function() {
-        $('.banner_slide').slick({
-            slidesToShow: 1,
-            slidesToScroll: 1,
-            autoplay: true,
-            arrows: false,
-        });
-    })
+    <script src="js/slick.js"></script>
+    <script src="js/nav-mobile.js"></script>
+    <!-- InstanceBeginEditable name="EditRegion1" -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('.banner_slide').slick({
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                autoplay: true,
+                arrows: false,
+            });
+        })
     </script>
-	<!-- InstanceEndEditable -->
+    <!-- InstanceEndEditable -->
 </body>
 
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
