--- a/DongTien.html
+++ b/DongTien.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+<!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
     <meta charset="UTF-8">
@@ -10,21 +11,21 @@
     <link rel="stylesheet" href="css/DongTien_style.css">
     <!-- InstanceEndEditable -->
     <link rel="stylesheet" href="css/bootstrap-theme.css">
-<link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-<link rel="stylesheet" href="css/slick.css">
-<link rel="stylesheet" href="css/slick-theme.css">
-<link rel="stylesheet" href="css/TrangChu_style.css">
-<!-- InstanceBeginEditable name="head" -->
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/TrangChu_style.css">
+    <!-- InstanceBeginEditable name="head" -->
     <!-- InstanceEndEditable -->
 </head>
 
 <body>
-<header>
+    <header>
         <div class="header-list">
             <div class="header-list--logo-and-search">
                 <div class="logo">
-                    <a href="TrangChu.html"><i class="icon logo__ico"></i></a>
+                    <a href="index.html"><i class="icon logo__ico"></i></a>
                 </div>
                 <div class="search">
                     <input type="text" placeholder="Bạn tìm gì">
@@ -174,7 +175,8 @@
                                     </div>
                                     <div class="information">
                                         <input type="text" name="nhap_danh_ba" placeholder="Nhập mã danh bạ" size="35">
-                                        <input type="text" name="sdt_lien_he" placeholder="Số điện thoại liên hệ" size="35">
+                                        <input type="text" name="sdt_lien_he" placeholder="Số điện thoại liên hệ"
+                                            size="35">
                                     </div>
                                 </li>
                             </ul>
@@ -227,15 +229,16 @@
                 </div>
                 <div class="col-md-3">
                     <ul class="list_about">
-                        <li><a href="#"><i class="icon icon_fb"></i>&nbsp;3.3tr</a> | <a href="#"><i class="icon icon_ytb"></i>&nbsp;616.1k</a></li>
+                        <li><a href="#"><i class="icon icon_fb"></i>&nbsp;3.3tr</a> | <a href="#"><i
+                                    class="icon icon_ytb"></i>&nbsp;616.1k</a></li>
                         <li>Website cùng tập đoàn:</li>
                         <li><a href="#"><i class="icon icon_dmx"></i></a></li>
                         <li><a href="#"><i class="icon icon_bhx"></i></a></li>
                     </ul>
                 </div>
             </div>
-      </div>
-</footer>
+        </div>
+    </footer>
     <div class="container-fluid privacy">
         <div class="row">
             <div class="col-md-12 sub_privacy">
@@ -248,20 +251,22 @@
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
-	<script src="js/slick.js"></script>
-	<script src="js/nav-mobile.js"></script>
-	<!-- InstanceBeginEditable name="EditRegion1" -->
+    <script src="js/slick.js"></script>
+    <script src="js/nav-mobile.js"></script>
+    <!-- InstanceBeginEditable name="EditRegion1" -->
     <script type="text/javascript">
-    $(document).ready(function() {
-        $('.slide_banner_dong_tien').slick({
-            slidesToShow: 1,
-            slidesToScroll: 1,
-            autoplay: true,
-            arrows: false,
-        });
-    })
+        $(document).ready(function () {
+            $('.slide_banner_dong_tien').slick({
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                autoplay: true,
+                arrows: false,
+            });
+        })
     </script>
     <!-- InstanceEndEditable -->
 </body>
 
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
