--- a/Tablet.html
+++ b/Tablet.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+<!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
     <meta charset="UTF-8">
@@ -7,25 +8,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- InstanceBeginEditable name="doctitle" -->
     <title>Tablet</title>
-	<link rel="stylesheet" href="css/Tablet_style.css">
-	<link rel="stylesheet" href="css/DienThoai_style.css">
+    <link rel="stylesheet" href="css/Tablet_style.css">
+    <link rel="stylesheet" href="css/DienThoai_style.css">
     <!-- InstanceEndEditable -->
     <link rel="stylesheet" href="css/bootstrap-theme.css">
-<link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-<link rel="stylesheet" href="css/slick.css">
-<link rel="stylesheet" href="css/slick-theme.css">
-<link rel="stylesheet" href="css/TrangChu_style.css">
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/TrangChu_style.css">
+    <!-- InstanceBeginEditable name="head" -->
+    <!-- InstanceEndEditable -->
 </head>
 
 <body>
-<header>
+    <header>
         <div class="header-list">
             <div class="header-list--logo-and-search">
                 <div class="logo">
-                    <a href="TrangChu.html"><i class="icon logo__ico"></i></a>
+                    <a href="index.html"><i class="icon logo__ico"></i></a>
                 </div>
                 <div class="search">
                     <input type="text" placeholder="Bạn tìm gì">
@@ -53,7 +54,7 @@
     </header>
     <!-- InstanceBeginEditable name="EditRegion2" -->
     <section>
-      <div class="container-fluid section">
+        <div class="container-fluid section">
             <div class="row banner_dien_thoai">
                 <div class="col-md-8">
                     <div class="banner_slide">
@@ -140,7 +141,8 @@
                                     <img src="images/152.jpg" alt="" class="img-responsive">
                                     <div class="sub_title">
                                         <h4><a href="#" class="name_phone">iPad Mini 7.9 inch Wifi 64GB (2019)</a></h4>
-                                        <p class="price">10.490.000₫&nbsp;&nbsp;<span class="old_price">10.990.000₫</span></p>
+                                        <p class="price">10.490.000₫&nbsp;&nbsp;<span
+                                                class="old_price">10.990.000₫</span></p>
                                         <p class="description">Mua kèm Apple Pencil ưu đãi giảm 500.000đ và <b>1
                                                 K.mãi</b> khác
                                         </p>
@@ -154,7 +156,8 @@
                                     <img src="images/153.jpg" alt="" class="img-responsive">
                                     <div class="sub_title">
                                         <h4><a href="#" class="name_phone">Huawei Mediapad T5 10.1 inch</a></h4>
-                                        <p class="price">5.690.000₫&nbsp;&nbsp;<span class="old_price">13.990.000₫</span></p>
+                                        <p class="price">5.690.000₫&nbsp;&nbsp;<span
+                                                class="old_price">13.990.000₫</span></p>
                                         <p class="description">Bao da trong hộp máy và <b>1 K.mãi</b> khác</p>
                                     </div>
                                 </div>
@@ -212,7 +215,8 @@
                                     <img src="images/157.jpg" alt="" class="img-responsive">
                                     <div class="sub_title">
                                         <h4><a href="#" class="name_phone">iPad Air 10.5 inch Wifi 64GB 2019</a></h4>
-                                        <p class="price">13.490.000₫&nbsp;&nbsp;<span class="old_price">13.990.000₫</span></p>
+                                        <p class="price">13.490.000₫&nbsp;&nbsp;<span
+                                                class="old_price">13.990.000₫</span></p>
                                         <p class="description">Mua kèm Apple Pencil ưu đãi giảm 500.000đ và <b>1
                                                 K.mãi</b> khác</p>
                                     </div>
@@ -252,7 +256,8 @@
                                     <div class="sub_title">
                                         <h4><a href="#" class="name_phone">iPad Mini 7.9 inch Wifi Cellular 64GB
                                                 (2019)</a></h4>
-                                        <p class="price">14.490.000₫&nbsp;&nbsp;<span class="old_price">14.990.000₫</span></p>
+                                        <p class="price">14.490.000₫&nbsp;&nbsp;<span
+                                                class="old_price">14.990.000₫</span></p>
                                         <p class="description">Mua kèm Apple Pencil ưu đãi giảm 500.000đ và <b>1
                                                 K.mãi</b> khác</p>
                                     </div>
@@ -289,7 +294,8 @@
                                     <img src="images/163.jpg" alt="" class="img-responsive">
                                     <div class="sub_title">
                                         <h4><a href="#" class="name_phone">iPad Wifi 128 GB (2018)</a></h4>
-                                        <p class="price">10.990.000₫&nbsp;&nbsp;<span class="old_price">11.490.000₫</span></p>
+                                        <p class="price">10.990.000₫&nbsp;&nbsp;<span
+                                                class="old_price">11.490.000₫</span></p>
                                         <p class="description">Mua kèm Apple Pencil ưu đãi giảm 500.000đ và <b>1
                                                 K.mãi</b> khác</p>
                                     </div>
@@ -468,7 +474,8 @@
                     </ul>
                 </div>
                 <div class="col-md-12 text-center">
-                    <button class="viewmore_dien_thoai">Xem thêm 1 máy tính bảng <span class="glyphicon glyphicon-triangle-bottom"></span></button>
+                    <button class="viewmore_dien_thoai">Xem thêm 1 máy tính bảng <span
+                            class="glyphicon glyphicon-triangle-bottom"></span></button>
                 </div>
             </div>
             <div class="row other_phones_dien_thoai">
@@ -482,7 +489,7 @@
                 </div>
             </div>
         </div>
-		<div class="container-fluid main_shipper_dien_thoai">
+        <div class="container-fluid main_shipper_dien_thoai">
             <div class="row" style="max-width: 1300px; margin: 0 auto;">
                 <div class="col-md-12">
                     <ul class="list_shipper_dien_thoai">
@@ -539,15 +546,16 @@
                 </div>
                 <div class="col-md-3">
                     <ul class="list_about">
-                        <li><a href="#"><i class="icon icon_fb"></i>&nbsp;3.3tr</a> | <a href="#"><i class="icon icon_ytb"></i>&nbsp;616.1k</a></li>
+                        <li><a href="#"><i class="icon icon_fb"></i>&nbsp;3.3tr</a> | <a href="#"><i
+                                    class="icon icon_ytb"></i>&nbsp;616.1k</a></li>
                         <li>Website cùng tập đoàn:</li>
                         <li><a href="#"><i class="icon icon_dmx"></i></a></li>
                         <li><a href="#"><i class="icon icon_bhx"></i></a></li>
                     </ul>
                 </div>
             </div>
-      </div>
-</footer>
+        </div>
+    </footer>
     <div class="container-fluid privacy">
         <div class="row">
             <div class="col-md-12 sub_privacy">
@@ -560,20 +568,22 @@
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
-	<script src="js/slick.js"></script>
-	<script src="js/nav-mobile.js"></script>
-	<!-- InstanceBeginEditable name="EditRegion1" -->
-	<script type="text/javascript">
-		$(document).ready(function() {
-        $('.banner_slide').slick({
-            slidesToShow: 1,
-            slidesToScroll: 1,
-            autoplay: true,
-            arrows: false,
-        });
-    })
+    <script src="js/slick.js"></script>
+    <script src="js/nav-mobile.js"></script>
+    <!-- InstanceBeginEditable name="EditRegion1" -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('.banner_slide').slick({
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                autoplay: true,
+                arrows: false,
+            });
+        })
     </script>
-	<!-- InstanceEndEditable -->
+    <!-- InstanceEndEditable -->
 </body>
 
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
