--- a/TinCongNghe.html
+++ b/TinCongNghe.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+<!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
     <meta charset="UTF-8">
@@ -7,24 +8,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- InstanceBeginEditable name="doctitle" -->
     <title>Tin công nghệ</title>
-	<link rel="stylesheet" href="css/TinCongNghe_styel.css">
+    <link rel="stylesheet" href="css/TinCongNghe_styel.css">
     <!-- InstanceEndEditable -->
     <link rel="stylesheet" href="css/bootstrap-theme.css">
-<link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-<link rel="stylesheet" href="css/slick.css">
-<link rel="stylesheet" href="css/slick-theme.css">
-<link rel="stylesheet" href="css/TrangChu_style.css">
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/TrangChu_style.css">
+    <!-- InstanceBeginEditable name="head" -->
+    <!-- InstanceEndEditable -->
 </head>
 
 <body>
-<header>
+    <header>
         <div class="header-list">
             <div class="header-list--logo-and-search">
                 <div class="logo">
-                    <a href="TrangChu.html"><i class="icon logo__ico"></i></a>
+                    <a href="index.html"><i class="icon logo__ico"></i></a>
                 </div>
                 <div class="search">
                     <input type="text" placeholder="Bạn tìm gì">
@@ -183,7 +184,8 @@
                             <div class="carosel">
                                 <div class="video_tin_cong_nghe">
                                     <div class="image_video_tin_cong_nghe" style="position: relative;">
-                                        <a href="#"><i class="icon_youtube"></i><img src="images/401.jpg" alt="" class="img-responsive"></a>
+                                        <a href="#"><i class="icon_youtube"></i><img src="images/401.jpg" alt=""
+                                                class="img-responsive"></a>
                                     </div>
                                     <div class="sub_title_videos_news_tin_cong_nghe">
                                         <h4><a href="#">Apple trả lời cho việc thay pin không chính hãng, chế vợt GIỰT
@@ -192,7 +194,8 @@
                                 </div>
                                 <div class="video_tin_cong_nghe">
                                     <div class="image_video_tin_cong_nghe">
-                                        <a href="#"><i class="icon_youtube"></i><img src="images/402.jpg" alt="" class="img-responsive"></a>
+                                        <a href="#"><i class="icon_youtube"></i><img src="images/402.jpg" alt=""
+                                                class="img-responsive"></a>
                                     </div>
                                     <div class="sub_title_videos_news_tin_cong_nghe">
                                         <h4><a href="#">Tựu trường rồi! HỌC SINH, SINH VIÊN chọn smartphone NGON, BỔ, RẺ
@@ -201,7 +204,8 @@
                                 </div>
                                 <div class="video_tin_cong_nghe">
                                     <div class="image_video_tin_cong_nghe">
-                                        <a href="#"><i class="icon_youtube"></i><img src="images/403.jpg" alt="" class="img-responsive"></a>
+                                        <a href="#"><i class="icon_youtube"></i><img src="images/403.jpg" alt=""
+                                                class="img-responsive"></a>
                                     </div>
                                     <div class="sub_title_videos_news_tin_cong_nghe">
                                         <h4><a href="#">Ngày LỄ VU LAN BÁO HIẾU nên làm gì để tặng cho ba mẹ? | Tôi
@@ -210,7 +214,8 @@
                                 </div>
                                 <div class="video_tin_cong_nghe">
                                     <div class="image_video_tin_cong_nghe">
-                                        <a href="#"><i class="icon_youtube"></i><img src="images/404.jpg" alt="" class="img-responsive"></a>
+                                        <a href="#"><i class="icon_youtube"></i><img src="images/404.jpg" alt=""
+                                                class="img-responsive"></a>
                                     </div>
                                     <div class="sub_title_videos_news_tin_cong_nghe">
                                         <h4><a href="#">Vsmart nói gì khi Vsmart Live bị tố giống điện thoại 'Tàu'? |
@@ -219,7 +224,8 @@
                                 </div>
                                 <div class="video_tin_cong_nghe">
                                     <div class="image_video_tin_cong_nghe">
-                                        <a href="#"><i class="icon_youtube"></i><img src="images/405.jpg" alt="" class="img-responsive"></a>
+                                        <a href="#"><i class="icon_youtube"></i><img src="images/405.jpg" alt=""
+                                                class="img-responsive"></a>
                                     </div>
                                     <div class="sub_title_videos_news_tin_cong_nghe">
                                         <h4><a href="#">Đặt mua điện thoại Samsung giảm 50%, nhận về hàng giả không ngờ
@@ -228,7 +234,8 @@
                                 </div>
                                 <div class="video_tin_cong_nghe">
                                     <div class="image_video_tin_cong_nghe">
-                                        <a href="#"><i class="icon_youtube"></i><img src="images/406.jpg" alt="" class="img-responsive"></a>
+                                        <a href="#"><i class="icon_youtube"></i><img src="images/406.jpg" alt=""
+                                                class="img-responsive"></a>
                                     </div>
                                     <div class="sub_title_videos_news_tin_cong_nghe">
                                         <h4><a href="#">Đánh giá Acer Aspire 3 A315: Laptop tuyệt vời cho người mới bắt
@@ -568,15 +575,16 @@
                 </div>
                 <div class="col-md-3">
                     <ul class="list_about">
-                        <li><a href="#"><i class="icon icon_fb"></i>&nbsp;3.3tr</a> | <a href="#"><i class="icon icon_ytb"></i>&nbsp;616.1k</a></li>
+                        <li><a href="#"><i class="icon icon_fb"></i>&nbsp;3.3tr</a> | <a href="#"><i
+                                    class="icon icon_ytb"></i>&nbsp;616.1k</a></li>
                         <li>Website cùng tập đoàn:</li>
                         <li><a href="#"><i class="icon icon_dmx"></i></a></li>
                         <li><a href="#"><i class="icon icon_bhx"></i></a></li>
                     </ul>
                 </div>
             </div>
-      </div>
-</footer>
+        </div>
+    </footer>
     <div class="container-fluid privacy">
         <div class="row">
             <div class="col-md-12 sub_privacy">
@@ -589,20 +597,22 @@
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
-	<script src="js/slick.js"></script>
-	<script src="js/nav-mobile.js"></script>
-	<!-- InstanceBeginEditable name="EditRegion1" -->
-	<script type="text/javascript">
-		$(document).ready(function() {
-        $('.carosel').slick({
-            slidesToShow: 2,
-            slidesToScroll: 1,
-            autoplay: true,
-            arrows: false,
-        });
-    })
+    <script src="js/slick.js"></script>
+    <script src="js/nav-mobile.js"></script>
+    <!-- InstanceBeginEditable name="EditRegion1" -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('.carosel').slick({
+                slidesToShow: 2,
+                slidesToScroll: 1,
+                autoplay: true,
+                arrows: false,
+            });
+        })
     </script>
-	<!-- InstanceEndEditable -->
+    <!-- InstanceEndEditable -->
 </body>
 
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
