--- a/DongHo.html
+++ b/DongHo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+<!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
     <meta charset="UTF-8">
@@ -7,25 +8,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- InstanceBeginEditable name="doctitle" -->
     <title>Đồng hồ</title>
-	<link rel="stylesheet" href="css/DienThoai_style.css">
+    <link rel="stylesheet" href="css/DienThoai_style.css">
     <link rel="stylesheet" href="css/DongHo_style.css">
     <!-- InstanceEndEditable -->
     <link rel="stylesheet" href="css/bootstrap-theme.css">
-<link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-<link rel="stylesheet" href="css/slick.css">
-<link rel="stylesheet" href="css/slick-theme.css">
-<link rel="stylesheet" href="css/TrangChu_style.css">
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/TrangChu_style.css">
+    <!-- InstanceBeginEditable name="head" -->
+    <!-- InstanceEndEditable -->
 </head>
 
 <body>
-<header>
+    <header>
         <div class="header-list">
             <div class="header-list--logo-and-search">
                 <div class="logo">
-                    <a href="TrangChu.html"><i class="icon logo__ico"></i></a>
+                    <a href="index.html"><i class="icon logo__ico"></i></a>
                 </div>
                 <div class="search">
                     <input type="text" placeholder="Bạn tìm gì">
@@ -212,7 +213,8 @@
                                     <div class="sub_title">
                                         <h4><a href="#" class="name_phone">Apple Watch S4 GPS 44mm viền nhôm dây vải</a>
                                         </h4>
-                                        <p class="price">12.490.000₫&nbsp;&nbsp;<span class="old_price">12.990.000₫</span>
+                                        <p class="price">12.490.000₫&nbsp;&nbsp;<span
+                                                class="old_price">12.990.000₫</span>
                                         </p>
                                         <p class="description"></p>
                                     </div>
@@ -290,7 +292,8 @@
                                     <div class="sub_title">
                                         <h4><a href="#" class="name_phone">Apple Watch S4 GPS 40mm viền nhôm dây vải</a>
                                         </h4>
-                                        <p class="price">11.490.000₫&nbsp;&nbsp;<span class="old_price">11.990.000₫</span></p>
+                                        <p class="price">11.490.000₫&nbsp;&nbsp;<span
+                                                class="old_price">11.990.000₫</span></p>
                                         <p class="description"></p>
                                     </div>
                                 </div>
@@ -619,7 +622,8 @@
                     </ul>
                 </div>
                 <div class="col-md-12 text-center">
-                    <button class="viewmore_dien_thoai">Xem tất cả đồng hồ thời trang <span class="glyphicon glyphicon-triangle-bottom"></span></button>
+                    <button class="viewmore_dien_thoai">Xem tất cả đồng hồ thời trang <span
+                            class="glyphicon glyphicon-triangle-bottom"></span></button>
                 </div>
             </div>
             <div class="row other_phones_dien_thoai">
@@ -692,15 +696,16 @@
                 </div>
                 <div class="col-md-3">
                     <ul class="list_about">
-                        <li><a href="#"><i class="icon icon_fb"></i>&nbsp;3.3tr</a> | <a href="#"><i class="icon icon_ytb"></i>&nbsp;616.1k</a></li>
+                        <li><a href="#"><i class="icon icon_fb"></i>&nbsp;3.3tr</a> | <a href="#"><i
+                                    class="icon icon_ytb"></i>&nbsp;616.1k</a></li>
                         <li>Website cùng tập đoàn:</li>
                         <li><a href="#"><i class="icon icon_dmx"></i></a></li>
                         <li><a href="#"><i class="icon icon_bhx"></i></a></li>
                     </ul>
                 </div>
             </div>
-      </div>
-</footer>
+        </div>
+    </footer>
     <div class="container-fluid privacy">
         <div class="row">
             <div class="col-md-12 sub_privacy">
@@ -713,20 +718,22 @@
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
-	<script src="js/slick.js"></script>
-	<script src="js/nav-mobile.js"></script>
-	<!-- InstanceBeginEditable name="EditRegion1" -->
-	<script type="text/javascript">
-		$(document).ready(function() {
-        $('.banner_slide').slick({
-            slidesToShow: 1,
-            slidesToScroll: 1,
-            autoplay: true,
-            arrows: false,
-        });
-    })
+    <script src="js/slick.js"></script>
+    <script src="js/nav-mobile.js"></script>
+    <!-- InstanceBeginEditable name="EditRegion1" -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('.banner_slide').slick({
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                autoplay: true,
+                arrows: false,
+            });
+        })
     </script>
-	<!-- InstanceEndEditable -->
+    <!-- InstanceEndEditable -->
 </body>
 
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
