--- a/Laptop.html
+++ b/Laptop.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+<!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
     <meta charset="UTF-8">
@@ -7,25 +8,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- InstanceBeginEditable name="doctitle" -->
     <title>Laptop</title>
-	<link rel="stylesheet" href="css/DienThoai_style.css">
+    <link rel="stylesheet" href="css/DienThoai_style.css">
     <link rel="stylesheet" href="css/Laptop_style.css">
     <!-- InstanceEndEditable -->
     <link rel="stylesheet" href="css/bootstrap-theme.css">
-<link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-<link rel="stylesheet" href="css/slick.css">
-<link rel="stylesheet" href="css/slick-theme.css">
-<link rel="stylesheet" href="css/TrangChu_style.css">
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/TrangChu_style.css">
+    <!-- InstanceBeginEditable name="head" -->
+    <!-- InstanceEndEditable -->
 </head>
 
 <body>
-<header>
+    <header>
         <div class="header-list">
             <div class="header-list--logo-and-search">
                 <div class="logo">
-                    <a href="TrangChu.html"><i class="icon logo__ico"></i></a>
+                    <a href="index.html"><i class="icon logo__ico"></i></a>
                 </div>
                 <div class="search">
                     <input type="text" placeholder="Bạn tìm gì">
@@ -100,7 +101,8 @@
                         </li>
                         <li style="margin-left: auto;"><input type="checkbox" name="new_dien_thoai"> Mới</li>
                         <li><input type="checkbox" name="installment_dien_thoai"> Trả góp 0%</li>
-                        <li style="margin-left: 0; margin-right: 0;"><input type="checkbox" name="only_sell_online_dien_thoai"> Chỉ bán online</li>
+                        <li style="margin-left: 0; margin-right: 0;"><input type="checkbox"
+                                name="only_sell_online_dien_thoai"> Chỉ bán online</li>
                     </ul>
                 </div>
             </div>
@@ -140,7 +142,8 @@
                                     <img src="images/196.jpg" alt="" class="img-responsive">
                                     <div class="sub_title">
                                         <h4><a href="#" class="name_phone">HP 15 da0443TX i3 7020U (5SL06PA)</a></h4>
-                                        <p class="price">11.290.000₫&nbsp;&nbsp;<span class="old_price">11.990.000₫</span>
+                                        <p class="price">11.290.000₫&nbsp;&nbsp;<span
+                                                class="old_price">11.990.000₫</span>
                                         </p>
                                         <p class="description">Tặng Balo laptop HP và <b>3 K.mãi</b> khác</p>
                                     </div>
@@ -158,7 +161,8 @@
                                         </div>
                                         <h4><a href="#" class="name_phone">Lenovo Ideapad 330S 14IKBR i5 8250U
                                                 (81F400NLVN)</a></h4>
-                                        <p class="price">12.290.000₫&nbsp;&nbsp;<span class="old_price">12.990.000₫</span></p>
+                                        <p class="price">12.290.000₫&nbsp;&nbsp;<span
+                                                class="old_price">12.990.000₫</span></p>
                                         <p class="description">Tặng Balo lenovo (khuyến mãi) và <b>3 K.mãi</b> khác
                                         </p>
                                     </div>
@@ -176,7 +180,8 @@
                                         </div>
                                         <h4><a href="#" class="name_phone">Acer Aspire A515 53 3153 i3
                                                 8145U/(NX.H6BSV.005)</a></h4>
-                                        <p class="price">10.990.000₫&nbsp;&nbsp;<span class="old_price">11.990.000₫</span></p>
+                                        <p class="price">10.990.000₫&nbsp;&nbsp;<span
+                                                class="old_price">11.990.000₫</span></p>
                                         <p class="description">Tặng Balo Acer (khuyến mãi) và <b>3 K.mãi</b> khác</p>
                                     </div>
                                 </div>
@@ -299,7 +304,8 @@
                                         </div>
                                         <h4><a href="#" class="name_phone">Lenovo ideapad C340 14IWL i5 8265U
                                                 (81N4003TVN)</a></h4>
-                                        <p class="price">16.790.000₫&nbsp;&nbsp;<span class="old_price">17.490.000₫</span></p>
+                                        <p class="price">16.790.000₫&nbsp;&nbsp;<span
+                                                class="old_price">17.490.000₫</span></p>
                                         <p class="description">Tặng Balo lenovo (khuyến mãi) và <b>3 K.mãi</b>
                                             khác</p>
                                     </div>
@@ -313,7 +319,8 @@
                                     <div class="sub_title">
                                         <h4><a href="#" class="name_phone">Lenovo Ideapad S340 14IWL i5 8265U
                                                 (81N7006HVN)</a></h4>
-                                        <p class="price">15.290.000₫&nbsp;&nbsp;<span class="old_price">15.990.000₫</span></p>
+                                        <p class="price">15.290.000₫&nbsp;&nbsp;<span
+                                                class="old_price">15.990.000₫</span></p>
                                         <p class="description"></p>
                                     </div>
                                 </div>
@@ -364,7 +371,8 @@
                                         </div>
                                         <h4><a href="#" class="name_phone">Acer Aspire A515 53 5112 i5 8265U
                                                 (NX.H6DSV.002)</a></h4>
-                                        <p class="price">13.990.000₫&nbsp;&nbsp;<span class="old_price">14.990.000₫</span></p>
+                                        <p class="price">13.990.000₫&nbsp;&nbsp;<span
+                                                class="old_price">14.990.000₫</span></p>
                                         <p class="description">Tặng Balo Acer (khuyến mãi) và <b>3 K.mãi</b> khác</p>
                                     </div>
                                 </div>
@@ -394,7 +402,8 @@
                                         </div>
                                         <h4><a href="#" class="name_phone">HP Envy 13 ah1011TU i5 8265U (5HZ28PA)</a>
                                         </h4>
-                                        <p class="price">20.490.000₫&nbsp;&nbsp;<span class="old_price">22.490.000₫</span></p>
+                                        <p class="price">20.490.000₫&nbsp;&nbsp;<span
+                                                class="old_price">22.490.000₫</span></p>
                                         <p class="description">Tặng Chuột không dây Genius NX 7010 và <b>5 K.mãi</b>
                                             khác</p>
                                     </div>
@@ -412,7 +421,8 @@
                                         </div>
                                         <h4><a href="#" class="name_phone">Acer Swift 3 SF315 52 50T9 i5 8250U
                                                 (NX.GZBSV.002)</a></h4>
-                                        <p class="price">17.990.000₫&nbsp;&nbsp;<span class="old_price">18.990.000₫</span></p>
+                                        <p class="price">17.990.000₫&nbsp;&nbsp;<span
+                                                class="old_price">18.990.000₫</span></p>
                                         <p class="description">Tặng Balo Acer (khuyến mãi) và <b>3 K.mãi</b>
                                             khác</p>
                                     </div>
@@ -425,7 +435,8 @@
                                     <img src="images/214.jpg" alt="" class="img-responsive">
                                     <div class="sub_title">
                                         <h4><a href="#" class="name_phone">Asus X507UF i3 8130U (EJ117T)</a></h4>
-                                        <p class="price">12.290.000₫&nbsp;&nbsp;<span class="old_price">22.990.000₫</span></p>
+                                        <p class="price">12.290.000₫&nbsp;&nbsp;<span
+                                                class="old_price">22.990.000₫</span></p>
                                         <p class="description">Tặng Chuột không dây Genius NX 7010 và <b>4 K.mãi</b>
                                             khác</p>
                                     </div>
@@ -522,7 +533,8 @@
                     </ul>
                 </div>
                 <div class="col-md-12 text-center">
-                    <button class="viewmore_dien_thoai">Xem thêm 223 laptop <span class="glyphicon glyphicon-triangle-bottom"></span></button>
+                    <button class="viewmore_dien_thoai">Xem thêm 223 laptop <span
+                            class="glyphicon glyphicon-triangle-bottom"></span></button>
                 </div>
             </div>
             <div class="row phu_kien_laptop">
@@ -581,7 +593,9 @@
                     <h3>góc tư vấn chọn mua laptop</h3>
                 </div>
                 <div class="col-md-6">
-                    <iframe data-src="https://www.youtube.com/embed/videoseries?list=UU9MzamEEjU1EMMXO_m9ob3Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="" src="https://www.youtube.com/embed/videoseries?list=UU9MzamEEjU1EMMXO_m9ob3Q"></iframe>
+                    <iframe data-src="https://www.youtube.com/embed/videoseries?list=UU9MzamEEjU1EMMXO_m9ob3Q"
+                        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""
+                        src="https://www.youtube.com/embed/videoseries?list=UU9MzamEEjU1EMMXO_m9ob3Q"></iframe>
                 </div>
                 <div class="col-md-6">
                     <ul class="list_news_laptop">
@@ -691,15 +705,16 @@
                 </div>
                 <div class="col-md-3">
                     <ul class="list_about">
-                        <li><a href="#"><i class="icon icon_fb"></i>&nbsp;3.3tr</a> | <a href="#"><i class="icon icon_ytb"></i>&nbsp;616.1k</a></li>
+                        <li><a href="#"><i class="icon icon_fb"></i>&nbsp;3.3tr</a> | <a href="#"><i
+                                    class="icon icon_ytb"></i>&nbsp;616.1k</a></li>
                         <li>Website cùng tập đoàn:</li>
                         <li><a href="#"><i class="icon icon_dmx"></i></a></li>
                         <li><a href="#"><i class="icon icon_bhx"></i></a></li>
                     </ul>
                 </div>
             </div>
-      </div>
-</footer>
+        </div>
+    </footer>
     <div class="container-fluid privacy">
         <div class="row">
             <div class="col-md-12 sub_privacy">
@@ -712,20 +727,22 @@
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
-	<script src="js/slick.js"></script>
-	<script src="js/nav-mobile.js"></script>
-	<!-- InstanceBeginEditable name="EditRegion1" -->
-	<script type="text/javascript">
-		$(document).ready(function() {
-        $('.banner_slide').slick({
-            slidesToShow: 1,
-            slidesToScroll: 1,
-            autoplay: true,
-            arrows: false,
-        });
-    })
+    <script src="js/slick.js"></script>
+    <script src="js/nav-mobile.js"></script>
+    <!-- InstanceBeginEditable name="EditRegion1" -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('.banner_slide').slick({
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                autoplay: true,
+                arrows: false,
+            });
+        })
     </script>
-	<!-- InstanceEndEditable -->
+    <!-- InstanceEndEditable -->
 </body>
 
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
