--- a/PhuKien.html
+++ b/PhuKien.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+<!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
     <meta charset="UTF-8">
@@ -7,24 +8,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- InstanceBeginEditable name="doctitle" -->
     <title>Phụ kiện</title>
-	<link rel="stylesheet" href="css/PhuKien_style.css">
+    <link rel="stylesheet" href="css/PhuKien_style.css">
     <!-- InstanceEndEditable -->
     <link rel="stylesheet" href="css/bootstrap-theme.css">
-<link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-<link rel="stylesheet" href="css/slick.css">
-<link rel="stylesheet" href="css/slick-theme.css">
-<link rel="stylesheet" href="css/TrangChu_style.css">
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/TrangChu_style.css">
+    <!-- InstanceBeginEditable name="head" -->
+    <!-- InstanceEndEditable -->
 </head>
 
 <body>
-<header>
+    <header>
         <div class="header-list">
             <div class="header-list--logo-and-search">
                 <div class="logo">
-                    <a href="TrangChu.html"><i class="icon logo__ico"></i></a>
+                    <a href="index.html"><i class="icon logo__ico"></i></a>
                 </div>
                 <div class="search">
                     <input type="text" placeholder="Bạn tìm gì">
@@ -68,7 +69,8 @@
             <div class="row menu_phu_kien">
                 <div class="col-md-12">
                     <ul class="list_menu_phu_kien">
-                        <li><input type="text" name="search_phu_kien" placeholder="Tìm phụ kiện..." size="30"><span class="glyphicon glyphicon-search"></span></li>
+                        <li><input type="text" name="search_phu_kien" placeholder="Tìm phụ kiện..." size="30"><span
+                                class="glyphicon glyphicon-search"></span></li>
                         <li>Phụ kiện cho:</li>
                         <li><a href="#">Galaxy S10</a></li>
                         <li><a href="#">Realme C2</a></li>
@@ -92,13 +94,15 @@
                         <li><a href="#">chuột/ bàn phím</a></li>
                         <li><a href="#">loa</a></li>
                         <li><a href="#">phụ kiện chính hãng</a></li>
-                        <li class="op_lung_phu_kien"><a href="#">ốp lưng <span class="glyphicon glyphicon-menu-down"></span></a>
+                        <li class="op_lung_phu_kien"><a href="#">ốp lưng <span
+                                    class="glyphicon glyphicon-menu-down"></span></a>
                             <ul class="sub_list_menu_op_lung_type_phu_kien">
                                 <li><a href="#">ốp lưng điện thoại</a></li>
                                 <li><a href="#">ốp lưng máy tính bảng</a></li>
                             </ul>
                         </li>
-                        <li class="phu_kien_khac_phu_kien"><a href="#">phụ kiện khác <span class="glyphicon glyphicon-menu-down"></span></a>
+                        <li class="phu_kien_khac_phu_kien"><a href="#">phụ kiện khác <span
+                                    class="glyphicon glyphicon-menu-down"></span></a>
                             <ul class="sub_list_menu_phu_kien_khac_type_phu_kien">
                                 <li><a href="#">phần mềm</a></li>
                                 <li><a href="#">pin</a></li>
@@ -332,15 +336,16 @@
                 </div>
                 <div class="col-md-3">
                     <ul class="list_about">
-                        <li><a href="#"><i class="icon icon_fb"></i>&nbsp;3.3tr</a> | <a href="#"><i class="icon icon_ytb"></i>&nbsp;616.1k</a></li>
+                        <li><a href="#"><i class="icon icon_fb"></i>&nbsp;3.3tr</a> | <a href="#"><i
+                                    class="icon icon_ytb"></i>&nbsp;616.1k</a></li>
                         <li>Website cùng tập đoàn:</li>
                         <li><a href="#"><i class="icon icon_dmx"></i></a></li>
                         <li><a href="#"><i class="icon icon_bhx"></i></a></li>
                     </ul>
                 </div>
             </div>
-      </div>
-</footer>
+        </div>
+    </footer>
     <div class="container-fluid privacy">
         <div class="row">
             <div class="col-md-12 sub_privacy">
@@ -353,20 +358,22 @@
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
-	<script src="js/slick.js"></script>
-	<script src="js/nav-mobile.js"></script>
-	<!-- InstanceBeginEditable name="EditRegion1" -->
-	<script type="text/javascript">
-		$(document).ready(function() {
-        $('.banner_slide').slick({
-            slidesToShow: 1,
-            slidesToScroll: 1,
-            autoplay: true,
-            arrows: false,
-        });
-    })
+    <script src="js/slick.js"></script>
+    <script src="js/nav-mobile.js"></script>
+    <!-- InstanceBeginEditable name="EditRegion1" -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('.banner_slide').slick({
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                autoplay: true,
+                arrows: false,
+            });
+        })
     </script>
-	<!-- InstanceEndEditable -->
+    <!-- InstanceEndEditable -->
 </body>
 
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
